--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,7 +1,7 @@
 ---
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
-
+import { siteConfig } from '@/site-config'
 import '@/styles/globals.css'
 import { ViewTransitions } from 'astro:transitions'
 import {
@@ -35,6 +35,11 @@ const {
   image = '/logo-color.jpg',
 } = Astro.props
 
+
+const socialImageURL = new URL(ogImage ? ogImage : '/og.webp', Astro.url)
+  .href
+
+const titleSeparator = '•'
 const alternateLang = Object.keys(LANGUAGES)
 const alternateLinks = alternateLang.map((_lang: UiType) => {
   return {
@@ -66,6 +71,9 @@ const alternateLinks = alternateLang.map((_lang: UiType) => {
 <meta name="generator" content={Astro.generator} />
 
 <link rel="sitemap" href="/sitemap-index.xml" />
+
+<!-- Canonical URL -->
+<link rel="canonical" href={canonicalURL} />
 
 <link
   rel="preload"
@@ -160,12 +168,40 @@ const alternateLinks = alternateLang.map((_lang: UiType) => {
 <meta property="og:description" content={description} />
 <meta property="og:image" content={new URL(image, Astro.url)} />
 
+<meta property="og:type" content={articleDate ? 'article' : 'website'} />
+<meta property="og:url" content={Astro.url} />
+<meta property="og:title" content={title} />
+<meta property="og:description" content={description} />
+<meta property="og:image" content={socialImageURL} />
+{
+  articleDate && (
+    <>
+      <meta property="article:author" content={siteConfig.author} />
+      <meta property="article:published_time" content={articleDate} />
+    </>
+  )
+}
+
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content={Astro.url} />
+<meta property="twitter:title" content={title} />
+<meta property="twitter:description" content={description} />
+<meta property="twitter:image" content={socialImageURL} />
+
+<!-- RSS auto-discovery -->
+<link
+  rel="alternate"
+  type="application/rss+xml"
+  title={siteConfig.title}
+  href="/rss.xml"
+/>
 
 <!-- Dark mode with prevent flickering flash between navigations -->
 <script is:inline>
